Added a new module to standardize messaging. Updated README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,24 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "livekit>=1.0.8,<2.0.0",
+    "pytest>=7.4.4",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=7.0.0,<8.0.0",
+    "pytest-asyncio>=0.21.0,<0.22.0",
+    "pytest-cov>=4.1.0,<5.0.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = "test_*.py"
+asyncio_mode = "auto"
+
+[tool.coverage.run]
+source = ["enzian_lib"]
+omit = ["tests/*"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
