Added dynamic routing.

--- a/ts/pipeline/.project/done/20250715211911.yaml
+++ b/ts/pipeline/.project/done/20250715211911.yaml
@@ -1,3 +1,5 @@
 id: "20250715211911"
 title: Improve documentation
+status: backlog
 created_at: 2025-07-15T21:19:11.588832+02:00
+finished_at: 2025-07-15T22:13:47.088292+02:00
